--- a/templates/settings.html
+++ b/templates/settings.html
@@ -26,9 +26,11 @@
     <div id="rules-ai-select-div">
       <h4>Rules Q&A</h4>
       <div>
-        <input type="radio" id="rules-gpt-4" name="rules-ai-model" value="gpt-4" checked>
-        <label for="rules-gpt-4">GPT-4</label>
-        <input type="radio" id="rules-grok-3-latest" name="rules-ai-model" value="grok-3-latest">
+        <input type="radio" id="rules-gpt-4.1" name="rules-ai-model" value="gpt-4.1" data-api-make="openai">
+        <label for="rules-gpt-4.1">GPT-4.1</label>
+        <input type="radio" id="rules-gpt-4.1-nano" name="rules-ai-model" value="gpt-4.1-nano" data-api-make="openai" checked>
+        <label for="rules-gpt-4.1-nano">GPT-4.1-nano</label>
+        <input type="radio" id="rules-grok-3-latest" name="rules-ai-model" value="grok-3-latest" data-api-make="xai">
         <label for="rules-grok-3-latest">Grok 3 Latest</label>
       </div>
     </div>
@@ -36,9 +38,11 @@
     <div id="strategy-suggester-ai-select-div">
       <h4>Strategy Suggester</h4>
       <div>
-        <input type="radio" id="strategy-gpt-4" name="strategy-ai-model" value="gpt-4">
-        <label for="strategy-gpt-4">GPT-4</label>
-        <input type="radio" id="strategy-grok-3-latest" name="strategy-ai-model" value="grok-3-latest" checked>
+        <input type="radio" id="strategy-gpt-4.1" name="strategy-ai-model" value="gpt-4.1" data-api-make="openai" checked>
+        <label for="rules-gpt-4.1">GPT-4.1</label>
+        <input type="radio" id="strategy-gpt-4.1-nano" name="strategy-ai-model" value="gpt-4.1-nano" data-api-make="openai">
+        <label for="rules-gpt-4.1-nano">GPT-4.1-nano</label>
+        <input type="radio" id="strategy-grok-3-latest" name="strategy-ai-model" value="grok-3-latest" data-api-make="xai">
         <label for="strategy-grok-3-latest">Grok 3 Latest</label>
       </div>
     </div>
@@ -46,9 +50,11 @@
     <div id="move-suggester-ai-select-div">
       <h4>Move Suggester</h4>
       <div>
-        <input type="radio" id="move-gpt-4" name="move-ai-model" value="gpt-4">
-        <label for="move-gpt-4">GPT-4</label>
-        <input type="radio" id="move-grok-3-latest" name="move-ai-model" value="grok-3-latest" checked>
+        <input type="radio" id="move-gpt-4.1" name="move-ai-model" value="gpt-4.1" data-api-make="openai" checked>
+        <label for="rules-gpt-4.1">GPT-4.1</label>
+        <input type="radio" id="move-gpt-4.1-nano" name="move-ai-model" value="gpt-4.1-nano" data-api-make="openai">
+        <label for="rules-gpt-4.1-nano">GPT-4.1-nano</label>
+        <input type="radio" id="move-grok-3-latest" name="move-ai-model" value="grok-3-latest" data-api-make="xai">
         <label for="move-grok-3-latest">Grok 3 Latest</label>
       </div>
     </div>
@@ -56,9 +62,11 @@
     <div id="tactical-calculator-ai-select-div">
       <h4>Tactical Calculator</h4>
       <div>
-        <input type="radio" id="tactical-gpt-4" name="tactical-ai-model" value="gpt-4" checked>
-        <label for="tactical-gpt-4">GPT-4</label>
-        <input type="radio" id="tactical-grok-3-latest" name="tactical-ai-model" value="grok-3-latest">
+        <input type="radio" id="tactical-gpt-4.1" name="tactical-ai-model" value="gpt-4.1" data-api-make="openai">
+        <label for="rules-gpt-4.1">GPT-4.1</label>
+        <input type="radio" id="tactical-gpt-4.1-nano" name="tactical-ai-model" value="gpt-4.1-nano" data-api-make="openai" checked>
+        <label for="rules-gpt-4.1-nano">GPT-4.1-nano</label>
+        <input type="radio" id="tactical-grok-3-latest" name="tactical-ai-model" value="grok-3-latest" data-api-make="xai">
         <label for="tactical-grok-3-latest">Grok 3 Latest</label>
       </div>
     </div>
