--- a/templates/settings.html
+++ b/templates/settings.html
@@ -38,11 +38,11 @@
     <div id="strategy-suggester-ai-select-div">
       <h4>Strategy Suggester</h4>
       <div>
-        <input type="radio" id="strategy-gpt-4.1" name="strategy-ai-model" value="gpt-4.1" data-api-make="openai" checked>
+        <input type="radio" id="strategy-gpt-4.1" name="strategy-ai-model" value="gpt-4.1" data-api-make="openai">
         <label for="rules-gpt-4.1">GPT-4.1</label>
         <input type="radio" id="strategy-gpt-4.1-nano" name="strategy-ai-model" value="gpt-4.1-nano" data-api-make="openai">
         <label for="rules-gpt-4.1-nano">GPT-4.1-nano</label>
-        <input type="radio" id="strategy-grok-3-latest" name="strategy-ai-model" value="grok-3-latest" data-api-make="xai">
+        <input type="radio" id="strategy-grok-3-latest" name="strategy-ai-model" value="grok-3-latest" data-api-make="xai" checked>
         <label for="strategy-grok-3-latest">Grok 3 Latest</label>
       </div>
     </div>
