Updated some of the prompts. Added grok 4 as an option for strategy suggestor. Adding Grok 4 to other functions and adding Gpt-5 series models requires a major update to how langchain is used in the app.

--- a/templates/fleet.html
+++ b/templates/fleet.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div id="fleet" class="tab-pane">
     <h2>Fleet Manager</h2>
-    <p>Don't have a TTS String? Generate a game (6 player with Prophecy of Kings only):
+    <p>Don't have a TTS String? Generate a game (6 player only):
         <a href="https://milty.shenanigans.be/" target="_blank">https://milty.shenanigans.be/</a>
     </p>
     <div class="tts-input-container">
