--- a/templates/settings.html
+++ b/templates/settings.html
@@ -42,7 +42,9 @@
         <label for="rules-gpt-4.1">GPT-4.1</label>
         <input type="radio" id="strategy-gpt-4.1-nano" name="strategy-ai-model" value="gpt-4.1-nano" data-api-make="openai">
         <label for="rules-gpt-4.1-nano">GPT-4.1-nano</label>
-        <input type="radio" id="strategy-grok-3-latest" name="strategy-ai-model" value="grok-3-latest" data-api-make="xai" checked>
+        <input type="radio" id="strategy-grok-4-latest" name="strategy-ai-model" value="grok-4-latest" data-api-make="xai" checked>
+        <label for="strategy-grok-4-latest">Grok 4 Latest</label>
+        <input type="radio" id="strategy-grok-3-latest" name="strategy-ai-model" value="grok-3-latest" data-api-make="xai">
         <label for="strategy-grok-3-latest">Grok 3 Latest</label>
       </div>
     </div>
